[metadata]
name = nxpl
version = 0.0.1
author = EungGu Yun
author_email = yuneg11@gmail.com
description = NXPL is eXperiment PipeLine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuneg11/nxpl
project_urls =
    Bug Tracker = https://github.com/yuneg11/nxpl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = nxpl
python_requires = >=3.7
