[metadata]
name = nxcl
version = attr: nxcl.__version__
author =  EungGu Yun
author_email = yuneg11@gmail.com
description = NXCL is an eXperiment Core Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuneg11/nxcl
project_urls =
    Documentation = https://yuneg11.github.io/NXCL
    Source = https://github.com/yuneg11/nxcl
    Tracker = https://github.com/yuneg11/nxcl/issues
license = MIT license
licens_files = LICENSE
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
keywords = nxcl, NXCL

[options]
packages = find:
package_dir =
    nxcl = nxcl
python_requires = >=3.7
install_requires =
    pyyaml >= 5.3
    rich >= 12.0
setup_requires =
    build
    setuptools
zip_safe = True
